--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-<h1> Hello World </h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Dasmoto's Arts &amp; Craft</title>
+  </head>
+  <link rel="stylesheet" type="text/css" href="C:\Projects\Dasmoto's Arts & Crafts\Resource\styles.css">
+  <body>
+    <h2 id="MainHead" > Dasmoto's Arts &amp; Crafts </h2>
+    <h2 id="brushes">Brushes</h2>
+    <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-2/hacksaw.jpeg">
+    <h3><strong>Hacksaw Brushes</strong></h3>
+    <p>Made of the highest quality oak, Hacksaw brushes are known for their weight and ability to hold paint in large amounts. Available in different sizes. <span id="Price" >Starting at $3.00 / brush.</p>
+    <div id="Frames"><h2>Frames</h2></div>
+    <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-2/frames.jpeg">
+    <h3><strong>Art Frames (assorted)</strong></h3>
+    <p>Assorted frames made of different material, including MDF, birchwood, and PDE. Select frames can be sanded and painted according to your needs. <span id="Price" >Starting at $2.00/ frame.</p>
+    <div id="Paint"><h2>Paint</h2></div>
+    <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-2/finnish.jpeg">
+    <h3><strong>Clean Finnish Paint</strong></h3>
+    <p>Imported paint from Finland. Over 256 colors available in-store, varying in quantity (1 oz. to 8 oz.). Clean Finnish paint microbinds to canvas, increasing the finish and longevity of any artwork.</br><span id="Price" > Starting at $5.00 / tube.</p>
+
+  </body>
+</html>
